<resources>

    <string name="app_name">ChoiceFilm</string>

    <string name="result">Результат</string>
    <string name="registry">Регистрация</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="birthday">ДД.ММ.ГГГГ</string>
    <string name="work">Род деятельности</string>
    <string name="durationEdit">Длительность(минуты)</string>

    <string name="save">Сохранить</string>
    <string name="skip">Пропустить</string>
    <string name="statistic">Статистика</string>
    <string name="passTest">Пройти тест</string>
    <string name="next">Следующий</string>

    <string name="mainOnResultPage">Вы еще не указали свои предпочтения</string>
    <string name="testActivityCheck">Отметьте те пункты, которые для вас наиболее предпочтительны</string>
    <string name="testActivityRB">Выберите самый лучший из предложенных пунктов</string>
    <string name="testActivityYear">Введите промежуток времени</string>
    <string name="timeEdit">Введите желаемую продолжительность (в минутах)</string>

    <string name="genre">Жанр</string>
    <string name="cast">Актёрский состав</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="year">Год выхода</string>
    <string name="rating">Рейтинг кинокритиков</string>
    <string name="reviews">Отзывы зрителей</string>

    <!-- .............................GENRES............................. -->
    <string name="thriller">триллер</string>
    <string name="western">вестерн</string>
    <string name="detective">детектив</string>
    <string name="documentary">документальный</string>
    <string name="drama">драма</string>
    <string name="comedy">комедия</string>
    <string name="melodrama">мелодрама</string>
    <string name="cartoon">мультфильм</string>
    <string name="musical">мюзикл</string>
    <string name="adventure">приключения</string>
    <string name="horrors">ужасы</string>
    <string name="fantastic">фантастика</string>

    <!-- .............................RATINGS............................. -->
    <string name="p90"> > 90 </string>
    <string name="p80"> > 80 </string>
    <string name="p70"> > 70 </string>
    <string name="p60"> > 60 </string>
    <string name="p50"> > 50 </string>
    <string name="p40"> > 40 </string>
    <string name="p30"> > 30 </string>
    <string name="p20"> > 20 </string>
    <string name="p10"> > 10 </string>

    <!-- .............................YEARS............................. -->
    <string name="start">Начало</string>
    <string name="end">Конец</string>

</resources>
